src/objects/Project_Actuals__c.object
<CustomObject>
    <description>Master - Detail to Project object and stores actuals info for each project. Used by Mulesoft for integration as well.</description>
    <fields>
        <fullName>As_Of_Date__c</fullName>
        <description>Date the record was created</description>
        <label>As Of Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_Of_Month__c</fullName>
        <description>Month in which the revenue was recognized</description>
        <label>As Of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>As_Of_Year__c</fullName>
        <description>Year in which the revenue was recognized</description>
        <label>As Of Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Actuals__c</fullName>
        <label>Cost Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ERP_Project_Code__c</fullName>
        <label>ERP Project Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Project_ID__c</fullName>
        <label>ERP Project ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Reference__c</fullName>
        <description>ERP reference ID</description>
        <externalId>true</externalId>
        <label>ERP Reference</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_in_Forecast__c</fullName>
        <formula>Project__r.pse__Include_In_Forecasting__c</formula>
        <label>Include in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project name</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Project_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recognition_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recognition Period</label>
        <referenceTo>ffrr__RecognitionPeriod__c</referenceTo>
        <relationshipName>Project_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Actuals__c</fullName>
        <description>Revenue recognized in ERP in the specified month and year</description>
        <label>Revenue Actuals</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_formula__c</fullName>
        <formula>DATE(
IF(
  MONTH(As_Of_Date__c) = 1, YEAR(As_Of_Date__c) - 1, YEAR(As_Of_Date__c)),
  
IF(
  MONTH(As_Of_Date__c) = 1, 12, MONTH(As_Of_Date__c)-1),
  
1)</formula>
        <label>Start Date (formula)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffrrtemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>ffrr__Template__c</referenceTo>
        <relationshipName>Project_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Monthly Actuals</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Monthly Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>